# ICMS

./: .gitignore  CameraAccess.py  GetCoordinates .py  LICENSE  README.md  check_dependency.py  config.json  dashboard_backup.txt  database.py  getCoordinates.py  helper.py  icms_dashboard.py  icms_dashboard.py_bck  log.py  pyproject.toml  requirements.txt  run.sh  seat_coordinates.py  seatbelt.py  test.py  test_module.py
ICMSBoarding/: config.json  detection_models.py  helper.py  icms_dashboard.py  requirements.txt
ICMSBoarding/BehaviourModel/: behaviour.h5
model/: keras_model.h5
voice_message/: text_script.txt
